#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-11
2012-10-23 Andy Salnikov
- upgrading to pdsdata V04-02-07
- added new package andor with classes ConfigV1, FrameV1

Tag: V00-03-10
2012-10-10 Andy Salnikov
- fix version numer for BldDataGMDV0

Tag: V00-03-09
2012-10-08 Andy Salnikov
- upgrading to pdsdata V04-02-01
- added new classes bld.BldDataGMDV0, usdusb.ConfigV1, usdusb.DataV1

Tag: V00-03-08
2012-09-28 Andy Salnikov
- upgrading to pdsdata V04-01-00
- added new classes control.ConfigV2, evr.ConfigV7

Tag: V00-03-07
2012-07-24 Andy Salnikov
- acqiris.ddl.xml: bug fix in Timestamp::value() method

Tag: V00-03-06
2012-07-06 Andy Salnikov
- new package quartz with single class ConfigV1 similar to opal1k.ConfigV1
- pnccd.FrameV1 is now contained in pnccd.FramesV1
- new class (not in XTC/pdsdata) pnccd.FullFrameV1 containing 1024x1024 image

Tag: V00-03-05
2012-06-26 Andy Salnikov
- Encoder.DataV[12]: added value() method, like in pdsdata classes
  but implemented slightly differently
  
Tag: V00-03-04
2012-06-22 Andy Salnikov
- EvrData.EventCodeV5: one member method was incorrectly named 
  (isTerminator instead of isCommand)
  
Tag: V00-03-03
2012-06-03 Andy Salnikov
- upgrade to pdsdata V03-07-07
- cspad adds new type ConfigV4

Tag: V00-03-02
2012-05-11 Andy Salnikov
- upgrade to pdsdata V03-07-00
- evr adds new type ConfigV6

Tag: V00-03-01
2012-05-03 Andy Salnikov
- upgrade to pdsdata V03-06-00
- new packages fli.ddl.xml, oceanoptics.ddl.xml
- princeton adds new type ConfigV3

Tag: V00-03-00
2012-05-02 Andy Salnikov
- all config types now have "config-type" tag
- evr.ddl.xml: one field is split into bitfields, neded to generate 