@@ -11,6 +11,13 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-12
+2012-11-08 Andy Salnikov
+- upgrading to pdsdata V04-05-00
+- new class princeton/ConfigV4
+- BldDataEbeamV* classes have new DamageMask enum
+- BldDataGMDV0 changed without updating version number
+
 Tag: V00-03-11
 2012-10-23 Andy Salnikov
 - upgrading to pdsdata V04-02-07
